Las URLS de login ya fueron arregladas

--- a/wine_base_marketplace/static/css/login.css
+++ b/wine_base_marketplace/static/css/login.css
@@ -145,6 +145,7 @@
       text-decoration: none;
       cursor: pointer;
       font-size: 18px;
+      color: #fff;
   }
   .glowIcon {
       text-shadow: 0 0 10px #fff;
